# MacaroniCMakeEx

CMake/: CMakeLists.txt
Macaroni/: project.lua
src/: hello.mcpp  worldTest.mcpp
